--- a/package.yaml
+++ b/package.yaml
@@ -10,6 +10,7 @@ dependencies:
   - split
   - grid
   - MemoTrie
+  - graph-wrapper
 
 library:
   source-dirs: src
@@ -18,6 +19,7 @@ executables:
   aoc21:
     main: Main.hs
     source-dirs: bin
+    ghc-options: -O2
     dependencies:
       - aoc21
 
